[gd_scene load_steps=23 format=3 uid="uid://bv3f70qiji4fu"]

[ext_resource type="Texture2D" uid="uid://dlshc6wkyvqjv" path="res://Sunny-land-files/Sunny-land-assets-files/PNG/spritesheets/frog-idle.png" id="1_jyrhc"]
[ext_resource type="Script" path="res://Frog.gd" id="1_mlh0y"]
[ext_resource type="Texture2D" uid="uid://dcsb10kn3ywjg" path="res://Sunny-land-files/Sunny-land-assets-files/PNG/spritesheets/enemy-deadth.png" id="2_4shwb"]
[ext_resource type="Texture2D" uid="uid://cfyk6s5n7f0gu" path="res://Sunny-land-files/Sunny-land-assets-files/PNG/spritesheets/frog-jump.png" id="4_yirb0"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_6ytci"]
size = Vector2(25, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_iynsl"]
atlas = ExtResource("2_4shwb")
region = Rect2(0, 0, 40, 41)

[sub_resource type="AtlasTexture" id="AtlasTexture_o2ahl"]
atlas = ExtResource("2_4shwb")
region = Rect2(40, 0, 40, 41)

[sub_resource type="AtlasTexture" id="AtlasTexture_hwp0b"]
atlas = ExtResource("2_4shwb")
region = Rect2(80, 0, 40, 41)

[sub_resource type="AtlasTexture" id="AtlasTexture_nan0u"]
atlas = ExtResource("2_4shwb")
region = Rect2(120, 0, 40, 41)

[sub_resource type="AtlasTexture" id="AtlasTexture_7aca3"]
atlas = ExtResource("2_4shwb")
region = Rect2(160, 0, 40, 41)

[sub_resource type="AtlasTexture" id="AtlasTexture_mslr2"]
atlas = ExtResource("2_4shwb")
region = Rect2(200, 0, 40, 41)

[sub_resource type="AtlasTexture" id="AtlasTexture_1pm5y"]
atlas = ExtResource("1_jyrhc")
region = Rect2(0, 0, 35, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_wojc4"]
atlas = ExtResource("1_jyrhc")
region = Rect2(35, 0, 35, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_acxng"]
atlas = ExtResource("1_jyrhc")
region = Rect2(70, 0, 35, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_aqrw1"]
atlas = ExtResource("1_jyrhc")
region = Rect2(105, 0, 35, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_c5tx7"]
atlas = ExtResource("4_yirb0")
region = Rect2(0, 0, 35, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_sfgqs"]
atlas = ExtResource("4_yirb0")
region = Rect2(35, 0, 35, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_mx11q"]
atlas = ExtResource("4_yirb0")
region = Rect2(70, 0, 35, 32)

[sub_resource type="SpriteFrames" id="SpriteFrames_d45rq"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_iynsl")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_o2ahl")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_hwp0b")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_nan0u")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_7aca3")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_mslr2")
}],
"loop": false,
"name": &"Death",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_1pm5y")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_wojc4")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_acxng")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_aqrw1")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_1pm5y")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_1pm5y")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_1pm5y")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_1pm5y")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_1pm5y")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_1pm5y")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_1pm5y")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_1pm5y")
}],
"loop": true,
"name": &"Idle",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_c5tx7")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_sfgqs")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_mx11q")
}],
"loop": true,
"name": &"Jump",
"speed": 5.0
}]

[sub_resource type="CircleShape2D" id="CircleShape2D_ikp44"]
radius = 233.009

[sub_resource type="RectangleShape2D" id="RectangleShape2D_buw2o"]
size = Vector2(18, 20)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_sc6l2"]
size = Vector2(27, 12)

[node name="Frog" type="CharacterBody2D"]
script = ExtResource("1_mlh0y")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(1.5, -8)
shape = SubResource("RectangleShape2D_6ytci")

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="."]
position = Vector2(2, -11)
sprite_frames = SubResource("SpriteFrames_d45rq")
animation = &"Jump"
metadata/_edit_lock_ = true

[node name="PlayerDetection" type="Area2D" parent="."]
visible = false

[node name="CollisionShape2D" type="CollisionShape2D" parent="PlayerDetection"]
position = Vector2(0, -9)
shape = SubResource("CircleShape2D_ikp44")

[node name="PlayerDeath" type="Area2D" parent="."]
visible = false

[node name="CollisionShape2D" type="CollisionShape2D" parent="PlayerDeath"]
position = Vector2(1, -10)
shape = SubResource("RectangleShape2D_buw2o")

[node name="Area2D" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
position = Vector2(1.5, -6)
shape = SubResource("RectangleShape2D_sc6l2")

[connection signal="body_entered" from="PlayerDetection" to="." method="_on_player_detection_body_entered"]
[connection signal="body_exited" from="PlayerDetection" to="." method="_on_player_detection_body_exited"]
[connection signal="body_entered" from="PlayerDeath" to="." method="_on_player_death_body_entered"]
[connection signal="body_entered" from="Area2D" to="." method="_on_area_2d_body_entered"]
